--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,23 +1,40 @@
-
+* body{
+    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif
+}
 #clear{
     clear: both;
 }
 #about-container{
     width: 100%;
-    padding-top: 60px;
+    padding-top: 20px;
 }
 #image-title{
     float: left;
     padding-right: 30px;
+    margin-left: 15px;
 }
 
 #title{
-    position: absolute;
-    width: 54%;
-    margin-left: 269px;
-    margin-top: 33px;
-    background: #a053277a;
-    min-height: 30vh;
+    padding-right: 186px;
+    padding-top: 78px;
+}
+#title h3{
+    font-size: 30px;
+    padding: 20px;
+}
+#title p{
+    padding: 20px;
+    line-height: 25px;
+}
+
+h3{
+    font-size: 30px;
+    padding: 30px;
+    letter-spacing:0.2em;
+}
+.container h2 {
+    font-size: 30px;
 }
 
 header #header-container, #navbar, #header-logo ,img, #left-nav , ul{
@@ -72,10 +89,11 @@ header ul li a{
 
 footer{
     width: 100%;
-    margin: auto;
     text-align: center;
 }
-
+#footer-container{
+    width: 90%;
+}
 footer ul li{
     list-style-type: none;
 }
@@ -83,7 +101,6 @@ footer ul li{
 footer #footer-logo, #box1, #box2, #box3, #box4{
     display: inline-block;
     padding: 60px;
-    
 }
 
 /* --- Testimonials --- */
@@ -93,6 +110,8 @@ footer #footer-logo, #box1, #box2, #box3, #box4{
     padding-left: 60px;
     padding-top: 60px;
     font-size: 30px;
+    text-align: center;
+    letter-spacing:0.2em;
 }
 #slider-body {
     clear: both;
@@ -163,7 +182,7 @@ footer #footer-logo, #box1, #box2, #box3, #box4{
 /* First */
 #t-1:checked ~ .dots label[for="t-1"] {
 	transform: scale(2);
-	background-color: #fff;
+	background-color: rgb(255, 185, 32);
 }
 #t-1:checked ~ .dots label[for="t-2"] {
 	transform: scale(1.5);
@@ -193,7 +212,7 @@ footer #footer-logo, #box1, #box2, #box3, #box4{
 }
 #t-2:checked ~ .dots label[for="t-2"] {
 	transform: scale(2);
-	background-color: #fff;
+	background-color: rgb(255, 185, 32);
 }
 #t-2:checked ~ .dots label[for="t-3"] {
 	transform: scale(1.5);
@@ -222,7 +241,7 @@ footer #footer-logo, #box1, #box2, #box3, #box4{
 }
 #t-3:checked ~ .dots label[for="t-3"] {
 	transform: scale(2);
-	background-color: #fff;
+	background-color: rgb(255, 185, 32);
 }
 #t-3:checked ~ .dots label[for="t-4"] {
 	transform: scale(1.5);
@@ -250,7 +269,7 @@ footer #footer-logo, #box1, #box2, #box3, #box4{
 }
 #t-4:checked ~ .dots label[for="t-4"] {
 	transform: scale(2);
-	background-color: #fff;
+	background-color: rgb(255, 185, 32);
 }
 #t-4:checked ~ .dots label[for="t-5"] {
 	transform: scale(1.5);
@@ -278,7 +297,7 @@ footer #footer-logo, #box1, #box2, #box3, #box4{
 }
 #t-5:checked ~ .dots label[for="t-5"] {
 	transform: scale(2);
-	background-color: #fff;
+	background-color: rgb(255, 185, 32);
 }
 #t-5:checked ~ .testimonials label[for="t-1"] {
 	transform: translateX(-1200px) translateZ(-360px) rotateY(45deg);
@@ -305,17 +324,23 @@ footer #footer-logo, #box1, #box2, #box3, #box4{
 
 @import url('https://fonts.googleapis.com/css?family=Amiri|Aref+Ruqaa|Cairo|Changa|El+Messiri|Harmattan|Jomhuria|Lateef|Mirza|Rakkas|Lato|Source+Sans+Pro|Ubuntu');
 #top-rated{
-    background-image: linear-gradient(-265deg, rgba(44, 216, 213, 0.45) 0%, #C5C1FF 56%, rgba(285, 196, 195, 0.71) 100%);	
+    /* background-image: linear-gradient(-265deg, rgba(44, 216, 213, 0.45) 0%, #C5C1FF 56%, rgba(285, 196, 195, 0.71) 100%);	
 	background-repeat: no-repeat;
-	background-attachment: fixed;
+	background-attachment: fixed; */
+    /* margin: 50px; */
+    padding-left: 65px;
 }
-#top-rated h2 {margin:2em; letter-spacing:0.2em; color: #EEE}
+#top-rated h2 {
+    margin:2em; 
+    letter-spacing:0.2em; 
+    color: rgb(7, 7, 7);
+}
 #top-rated .container{
 	margin: 3em auto;
 	width: 90%;
 	text-align: center;
 	font-family: 'Ubuntu', sans-serif;
-font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 #top-rated .item {
 	margin: 2em;
