--- a/styles/recomendations.css
+++ b/styles/recomendations.css
@@ -63,20 +63,20 @@ $('.rating input').change(
   color: #ddd;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
-*{
+ @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+/*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-} */
-html,body{
+} */ */
+/* html,body{
   display: grid;
   height: 100%;
   place-items: center;
  text-align: center;
   background: #000;
-}
+} */
 .container{
   position: relative;
   width: 350px;
