--- a/styles/recomendations.css
+++ b/styles/recomendations.css
@@ -3,13 +3,13 @@
 
 }
 #places img {
-    display: block;
+  display: block;
 	width: 400px;
 	height:400px;
 	padding-bottom:10px ;
-    padding-top: -5px;
-    margin: 2px;
-    padding: 30px;
+  padding-top: -5px;
+  margin: 2px;
+  padding: 30px;
 }
 #places h3{
   clear: both;
@@ -69,7 +69,7 @@ $('.rating input').change(
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-} */ */
+} */ 
 /* html,body{
   display: grid;
   height: 100%;
