--- a/styles/recomendations.css
+++ b/styles/recomendations.css
@@ -1,30 +1,51 @@
-#places {
-	padding-top : 30px;
 
+#places {
+  margin-top: 100px;
 }
+/* 
+#first-header{
+  position: relative;
+  bottom: 6500px;
+  left: 550px;
+  margin-top: 50px;
+} */
+
 #places img {
   display: block;
-	width: 400px;
-	height:400px;
-	padding-bottom:10px ;
-  padding-top: -5px;
-  margin: 2px;
-  padding: 30px;
+	width: 700px;
+	height:500px;
+  margin-left: 400px;
+  margin-right: auto;
+  border:  solid #00000057 2px;
+  box-shadow: 3px 3px 6px #0000006b;
+  
 }
+
+
 #places h3{
-  clear: both;
-    font-size: 30px;
+   /* clear: both; */
+    font-size: 50px;
     font-weight: bold;
-    letter-spacing: unset;
-    padding-top: 10px;
+    position: relative;
+    bottom: 500px;
+    margin-left: 90px;
+    font-family: 'EB Garamond', serif;
+
 }
+
+.container{
+  margin-left: 50px;
+  position: relative;
+  bottom: 400px;
+}
+
 #places p{
-    font-size: 15px;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: bold;
-    width: 50%;
-    margin-bottom: -43px;
-}
+    font-size: 17px;
+    width: 20%;
+    margin-top: 30px;
+    line-height: 1.6;
+   }
+
 #places #alaray spool >img {
    position: relative;
 
@@ -32,12 +53,14 @@
 #places #alaray spool >h3 {
     float: right;
  
- }
+ } 
 
-footer {
+
+ footer {
 	clear: both;
 }
-$('.rating input').change(
+
+$('.rating input').change{
   function() {
     $('#choice').text(this.value + ' stars');
   }
@@ -197,4 +220,4 @@ form .btn button{
   text-transform: uppercase;
   cursor: pointer;
   transition: all 0.3s ease;
-}
+} 
