--- a/styles/contactus.css
+++ b/styles/contactus.css
@@ -1,121 +1,242 @@
-a{
+a {
   text-decoration: none;
   color: black;
 }
-header #header-container, #navbar, #left-nav , ul{
-    clear: both;
-    display: inline-block;
+
+* {
+  font-family: 'Caladea', serif;
 }
-#header-container{
-	width: 100%;
+
+h2 p {
+  font-family: sans-serif;
 }
-#header-container .mySlides{
-	width: 100%;
-	min-height: 50vh;
+
+#social-media i {
+  padding-top: 30px;
+  padding-right: 10px;
+  color: #BDBEBE;
+}
+
+/* 
+header #navbar, #left-nav , ul{
+  clear: both;
+  display: inline-block;
 }
 
 #navbar{
-    width: 100%;
-    background-color: rgb(255 255 255 / 62%);
-	box-shadow: 0 4px 10px 0 rgb(0 0 0 / 75%);
-	position: fixed;
+	width: 100%;
+    background-color: #70695f69;
+    box-shadow: 0 4px 10px 0 rgb(0 0 0 / 75%);
+    position: fixed;
     top: 0;
     z-index: 1;
 }
-#left-nav img{
-	padding-left: 20px;
-}
-#right-nav i{
-    padding-left: 20px;
 
+header #header-container, #navbar, #left-nav, ul {
+  clear: both;
+  display: inline-block;
 }
-#social-media i{
-    padding-top: 30px;
-    padding-right: 10px;
-}
-#left-nav ul{
-	position: absolute;
-    top: 15px;
-    left: 400px;
-    display: flex;
-    justify-content: space-between;
 
+#header-container {
+  width: 100%;
 }
-#left-nav ul li{
+
+#header-container .mySlides {
+  width: 100%;
+  min-height: 50vh;
+}
+
+#navbar {
+  width: 100%;
+  background-color: rgb(255 255 255 / 62%);
+  box-shadow: 0 4px 10px 0 rgb(0 0 0 / 75%);
+  position: fixed;
+  top: 0;
+  z-index: 1;
+}
+
+#left-nav img {
+  padding-left: 20px;
+}
+
+#right-nav i {
+  padding-left: 20px;
+}
+
+#social-media i {
+  padding-top: 30px;
+  padding-right: 10px;
+}
+
+#left-nav ul {
+  position: absolute;
+  top: 15px;
+  left: 400px;
+  display: flex;
   justify-content: space-between;
 }
 
-#left-nav ul li a{
-    padding-right: 20px;
-    color: #0A0220;
-    font-size: 25px;
-	text-decoration: none;
+#left-nav ul li {
+  justify-content: space-between;
+}
+
+#left-nav ul li a {
+  padding-right: 20px;
+  color: #0A0220;
+  font-size: 25px;
+  text-decoration: none;
   margin-right: 30px;
 }
-#left-nav ul li a:active{
-	color: #94442b;
+
+#left-nav ul li a:active {
+  color: #94442b;
+} */
+
+#header-container {
+  width: 100%;
+  overflow: hidden;
+}
+
+#navbar {
+  width: 100%;
+  height: 69px;
+  background-color: #70695f69;
+  box-shadow: 0 4px 10px 0 rgb(0 0 0 / 75%);
+  position: fixed;
+  top: 0;
+  z-index: 1;
+}
+
+#left-nav img {
+  padding-left: 20px;
+  width: 80px;
+  margin-top: 6px;
+}
+
+#left-nav ul {
+  position: absolute;
+  top: 15px;
+  left: 800px;
+}
+
+#left-nav ul li a {
+  padding-right: 35px;
+  position: relative;
+  color: #f0fbff;
+  font-size: 20px;
+  text-decoration: none;
+  font-family: 'Caladea', serif;
+  right: 72px;
+  top: 10px
+}
+
+#left-nav ul li a:hover {
+  color: #0089BB;
+}
+
+#left-nav ul li a:active {
+  color: #005070;
+}
+
+header ul li {
+  list-style-type: none;
+  display: inline-block;
+}
+
+img {
+  vertical-align: middle;
 }
 
 /* Resources1× 0.5× 0.25×Rerun */
 
 /* main */
-*{
+
+.backgroundColor{
+  
+}
+.content h2 ,.content p{
+  color: rgb(255 255 255);
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+  font-family: 'Caladea', serif;
+}
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins',sans-serif;
-
+  font-family: 'Poppins', sans-serif;
 }
 
-
-.contact{
+.contact {
+  /* position: relative; */
+  /* min-height: 100vh; */
   position: relative;
-    min-height: 100vh;
-    padding: 125px 154px;
-    display: flex;
-    top: -15px;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-image: url(../images/wp4446841.jpg);
-    background-size: cover; 
+  top: -49px;
+  height: 1100px;
+  padding: 125px 154px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: url(../images/wp4446841.jpg);
+  background-size: cover;
   /* opacity: 0.5; */
 }
 
+.content+div {
+  padding: 50px;
+}
 
-.contact .content{
+h2 {
+  padding-bottom: 50px;
+}
+
+.contact .content {
   max-width: 800px;
   text-align: center;
 }
-.contact .content h2{
+
+.contact .content h2 {
   font-size: 36px;
   font-weight: 500;
   color: #fff;
+  margin-top: 55px;
 }
-.contact .content hp{
+
+.contact .content hp {
   font-weight: 300;
   color: #fff;
 }
-.container{
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-top: 30px;
 
-
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  background-color: #ffffff67;
+  border-radius: 5px;
 }
-.container .contactInfo{
+
+.container .contactInfo {
   width: 50%;
   display: flex;
   flex-direction: column;
 }
-.container .contactInfo .box{
+
+.container .contactInfo .box {
   position: relative;
   padding: 20px 0;
   display: flex;
 }
-.container .contactInfo .box .icon{
+
+.icon:nth-last-of-type(2) {
+  margin-bottom: 50px;
+}
+
+.container .contactInfo .box .icon {
   min-width: 60px;
   height: 60px;
   background: #fff;
@@ -125,46 +246,48 @@ header #header-container, #navbar, #left-nav , ul{
   border-radius: 50px;
   font-size: 22px;
 }
-.container .contactInfo .box .text{
+
+.container .contactInfo .box .text {
   display: flex;
   margin-left: 20px;
   font-size: 16px;
   color: #fff;
   flex-direction: column;
   font-weight: 300;
-
-} 
-.container .contactInfo .box .text h3{
-  font-weight: 500;
-  color:#00bcd4;
-
 }
 
-.contactForm
-{
-  width: 40%;
+.container .contactInfo .box .text h3 {
+  font-weight: 500;
+  color: black;
+  padding: 10px;
+}
+
+.contactForm {
+  border-radius: 5px;
+  width: 30%;
   padding: 40px;
   background: #fff;
-
 }
+
 .contactForm h2 {
   font-size: 30px;
   color: #333;
   font-weight: 500;
 }
-.contactForm .inputBox{
+
+.contactForm .inputBox {
   position: relative;
   width: 100%;
-  margin-top: 10px;
-
+  margin-top: 50px;
 }
-.contactForm .inputBox input{
 
+.contactForm .inputBox input {
   position: relative;
   width: 100%;
   margin-top: 40px;
 }
-.contactForm .inputBox input,.contactForm.inputBox input textarea{
+
+.contactForm .inputBox input, .contactForm.inputBox input textarea {
   width: 100%;
   padding: 5px 0;
   font-size: 16px;
@@ -174,7 +297,8 @@ header #header-container, #navbar, #left-nav , ul{
   outline: none;
   resize: none;
 }
-.contactForm .inputBox span{
+
+.contactForm .inputBox span {
   position: absolute;
   left: 0;
   padding: 5px 0;
@@ -183,18 +307,15 @@ header #header-container, #navbar, #left-nav , ul{
   pointer-events: none;
   transition: 0.5s;
   color: #666;
-
 }
-.contactForm .inputBox input:focus ~ span,
-.contactForm .inputBox input:valid ~ span
-{
+
+.contactForm .inputBox input:focus~span, .contactForm .inputBox input:valid~span {
   color: #005070;
   font-size: 12px;
   transform: translateY(-20px);
-
 }
-.contactForm .inputBox input[type="submit"]
-{
+
+.contactForm .inputBox input[type="submit"] {
   width: 100px;
   background: #005070;
   color: #fff;
@@ -204,50 +325,63 @@ header #header-container, #navbar, #left-nav , ul{
   font-size: 18px;
 }
 
-@media  (max-width:991px) {
-  .contact{
+@media (max-width:991px) {
+  .contact {
     padding: 50px;
-
   }
-  .container{
+  .container {
     flex-direction: column;
   }
-  .container .contactInfo{
+  .container .contactInfo {
     margin-bottom: 40px;
   }
-  .container .contactInfo .contactForm{
+  .container .contactInfo .contactForm {
     width: 100%;
   }
-  
 }
+
 /* footer */
 
-#footer-container ul li a{
+#footer-container ul p {
+  font-size: 20px;
+  padding: 10px 0px;
+  color: #BA9B7A;
+}
+
+footer {
+  width: 100%;
+  text-align: center;
+  position: relative;
+}
+
+.color {
+  height: 1016px;
+}
+
+#footer-container ul li a {
   text-decoration: none;
-  color: #727272;
+  color: #BDBEBE;
 }
 
-#footer-container ul p{
-	font-size: 20px;
-	padding: 10px 0px;
+#footer-container ul p {
+  font-size: 20px;
+  padding: 10px 0px;
 }
 
-footer{
-    width: 100%;
-    text-align: center;
-}
-#footer-container{
-	background-color: #005070;
-}
-footer ul li{
-    list-style-type: none;
+#footer-container {
+  background-color: #005070;
+  position: relative;
+  /* bottom: 49px; */
+  height: 328px;
+  top: 18px;
 }
 
-footer #footer-logo, #box1, #box2, #box3, #box4{
-    display: inline-block;
-    padding: 60px;
+footer ul li {
+  list-style-type: none;
+  padding: 20px;
 }
 
-
-
-
+footer #footer-logo, #box1, #box2, #box3, #box4 {
+  display: inline-block;
+  padding: 60px;
+}
